# Agent_In_Rust_Scratch

./: .env.example  AGENTS.md  Cargo.toml  README.md
.agent/: events.db  memory.db  policy_audit.jsonl  session.jsonl
docs/: architecture.md
src/: main.rs
src/agent/: config.rs  events.rs  harness.rs  memory.rs  mod.rs  model.rs  permissions.rs  planner.rs  policy.rs  prompt.rs  router.rs  scheduler.rs  session.rs  skills.rs  telegram.rs  tools.rs  types.rs  websocket.rs
